# Moonwalk-Macro

./: .gitignore  Cargo.toml  README.md  build-releases.sh
releases/: README.md
src/: config.rs  hotkeys.rs  macros.rs  main.rs  ui.rs
