[package]
name = "moonwalk-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
enigo = "0.2"
device_query = "2.1"
global-hotkey = "0.6"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
image = { version = "0.24", features = ["ico"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "moonwalk-macros"
path = "src/main.rs"
